[package]
name = "wspty"
version = "0.1.0"
authors = ["Jason NI (nixin) <jason.ni.py@gmail.com>"]
description = "xterm.js example with Rust Tokio and pty backend server"
homepage = "https://github.com/jason-ni/wspty/tree/master/"
repository = "https://github.com/jason-ni/wspty"
readme = "README.md"
categories = ["asynchronous", "os::unix-apis"]
license = "MIT"
edition = "2018"


[dependencies]
anyhow = "1.0"
bytes = "0.6.0"
futures = "0.3"
futures-util = "0.3.8"
libc = "0.2"
log = "0.4"
nix = "=0.17.0"
env_logger = "0.7"
pretty-hex = "0.2.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"]}
tokio-tungstenite = "0.13.0"
tungstenite = "0.12.0"
